@@ -1,3 +1,8 @@
+2012-05-24 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* mpz/remove.c: Support negative divisor.
+	* tests/mpz/t-remove.c: Test zero dividend and negative divisor.
+
 2012-05-23  Torbjorn Granlund  <tege@gmplib.org>
 
 	* tests/mpz/reuse.c: Major rewrite.
